<resources>
    <string name="app_name">eGrocery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_myOrder">My Order</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_address">My Address</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about">About</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>


    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sing">Signup</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="spinner_title">select Area</string>

    <string name="pic_myslf">Pickup myself</string>
    <string name="cash_delivery">Cash on delivery</string>
    <string name="pay_online">Pay with online</string>
    <string name="currency">₹</string>
    <string name="home_view_all">View All</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>